--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,10 @@
     <title>Market</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="../assets/img/" alt="Logo de la marque" />
+      <h1>MARKET</h1>
+    </header>
     <main>
       <section>
         <p>
@@ -16,6 +19,10 @@
           tempora fugiat dolorem voluptas atque architecto optio, modi quod
           autem perferendis aut cumque delectus iure corrupti, mollitia
           voluptatibus id aliquid quas.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae
+          placeat ex fuga officia blanditiis quis.
         </p>
       </section>
       <section>
