--- a/pages/index.html
+++ b/pages/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+    />
     <link rel="stylesheet" href="../styles/style.css" />
     <title>Market</title>
   </head>
   <body>
     <header>
-      <img src="../assets/img/" alt="Logo de la marque" />
+      <img
+        src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        alt="Logo de la marque"
+      />
       <h1>MARKET</h1>
     </header>
     <main>
@@ -25,13 +32,20 @@
           placeat ex fuga officia blanditiis quis.
         </p>
       </section>
-      <section>
+      <section class="card">
         <h4>Prix</h4>
         <h5>Titre</h5>
         <p>Lorem ipsum dolor sit amet consectetur.</p>
         <img src="#" alt="#" />
       </section>
-      <footer></footer>
     </main>
+    <footer>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit maxime
+        similique, fugit iusto quod tempora nulla accusamus, voluptas ratione
+        consectetur aperiam modi sequi, sint quae repellat dolorum laborum
+        placeat!
+      </p>
+    </footer>
   </body>
 </html>
