Mise en page card 1 et description + header et footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
       <h1>MARKET</h1>
     </header>
     <main>
-      <section>
+      <section class="description">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
           tempora fugiat dolorem voluptas atque architecto optio, modi quod
@@ -33,10 +33,10 @@
         </p>
       </section>
       <section class="card">
-        <h4>Prix</h4>
-        <h5>Titre</h5>
+        <h3>Clavier AZERTY</h3>
+        <img src="../assets/img/keyboard.webp" alt="Keyboard" />
         <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <img src="#" alt="#" />
+        <h5>20€</h5>
       </section>
     </main>
     <footer>
