--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+      href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
     />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Market</title>
   </head>
   <body>
     <header>
       <img
-        src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
         alt="Logo de la marque"
       />
       <h1>MARKET</h1>
@@ -34,7 +34,7 @@
       </section>
       <section class="card">
         <h3>Clavier AZERTY</h3>
-        <img src="../assets/img/keyboard.webp" alt="Keyboard" />
+        <img src="./assets/img/keyboard.webp" alt="Keyboard" />
         <p>Lorem ipsum dolor sit amet consectetur.</p>
         <h5>20€</h5>
       </section>
