reprise a zéro de la feuille de style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style2.css" />
     <title>Market</title>
   </head>
   <body>
@@ -20,31 +20,37 @@
       <h1>MARKET</h1>
     </header>
     <main>
-      <section class="description">
+      <aside>
+        <button></button>
+      </aside>
+      <section>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-          tempora fugiat dolorem voluptas atque architecto optio, modi quod
-          autem perferendis aut cumque delectus iure corrupti, mollitia
-          voluptatibus id aliquid quas.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae
-          placeat ex fuga officia blanditiis quis.
+          Un clavier azerty est un clavier alphanumérique dont les touches sont
+          marquées selon la disposition azerty. La disposition tient son nom de
+          la position des six premières lettres de la première rangée des
+          touches alphabétiques.
         </p>
       </section>
-      <section class="card">
-        <h3>Clavier AZERTY</h3>
-        <img src="./assets/img/keyboard.webp" alt="Keyboard" />
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <h5>20€</h5>
-      </section>
+      <article
+        itemscope
+        itemtype="https://schema.org/IndividualProduct"
+        itemid="#product"
+      >
+        <h3 itemprop="name">Clavier</h3>
+        <figure itemprop="image">
+          <img src="./assets/img/keyboard.webp" alt="Keyboard" />
+          <figcaption itemprop="description">
+            Clavier azerty pour écrire comme un pro !
+          </figcaption>
+        </figure>
+        <h4>20€</h4>
+      </article>
     </main>
     <footer>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit maxime
-        similique, fugit iusto quod tempora nulla accusamus, voluptas ratione
-        consectetur aperiam modi sequi, sint quae repellat dolorum laborum
-        placeat!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae
+        molestias ducimus quibusdam ex reiciendis nisi similique suscipit porro
+        adipisci dolore!
       </p>
     </footer>
   </body>
