ajout cgu cgv footer

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
       </article>
     </main>
     <footer>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae
-        molestias ducimus quibusdam ex reiciendis nisi similique suscipit porro
-        adipisci dolore!
-      </p>
+      <h5>Tout nos matériels sont issus de récupérations ou dons reconditionnés par nos équipes. </h5>
+      <nav>
+          <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+          <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+          <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+      </nav>
     </footer>
   </body>
 </html>
