--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <aside>
-        <button></button>
+        <button class="left"></button>
       </aside>
       <section>
         <p>
@@ -45,13 +45,19 @@
         </figure>
         <h4>20€</h4>
       </article>
+      <aside class="right">
+        <button></button>
+      </aside>
     </main>
     <footer>
-      <h5>Tout nos matériels sont issus de récupérations ou dons reconditionnés par nos équipes. </h5>
+      <h5>
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
+      </h5>
       <nav>
-          <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-          <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-          <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
       </nav>
     </footer>
   </body>
