--- a/index.html
+++ b/index.html
@@ -19,7 +19,37 @@
       />
       <h1>MARKET</h1>
     </header>
-
+    <main>
+      <section>
+        <aside>
+          <button></button>
+        </aside>
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <img src="" alt="" />
+      </section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
+        libero corrupti itaque praesentium numquam quam dignissimos accusantium
+        officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
+        iure eius ut fugit, non, repudiandae reprehenderit totam voluptate hic?
+        Facilis assumenda alias vel sunt maxime, cumque mollitia error
+        accusantium libero.
+      </p>
+      <section>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/nHJajS8raQU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+    </main>
     <footer>
       <h5>
         Tout nos matériels sont issus de récupérations ou dons reconditionnés
