--- a/index.html
+++ b/index.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
-    />
-    <link rel="stylesheet" href="../../style2.css" />
-    <title>Market</title>
-  </head>
-  <body>
-    <header>
-      <img
-        src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
-        alt="Logo de la marque"
-      />
-      <h1>MARKET</h1>
-    </header>
-    <main>
-      <section>
-        <aside>
-          <button></button>
-        </aside>
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-      </section>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
-        libero corrupti itaque praesentium numquam quam dignissimos accusantium
-        officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
-        iure eius ut fugit, non, repudiandae reprehenderit totam voluptate hic?
-        Facilis assumenda alias vel sunt maxime, cumque mollitia error
-        accusantium libero.
-      </p>
-      <section>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/nHJajS8raQU"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </section>
-    </main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés
-        par nos équipes.
-      </h5>
-      <nav>
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
+  <link rel="stylesheet" href="../../style2.css" />
+  <title>Market</title>
+</head>
+
+<body>
+  <header>
+    <img src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Logo de la marque" />
+    <h1>MARKET</h1>
+  </header>
+  <main>
+    <section>
+      <aside>
+        <button></button>
+      </aside>
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+    </section>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
+      libero corrupti itaque praesentium numquam quam dignissimos accusantium
+      officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
+      iure eius ut fugit, non, repudiandae reprehenderit totam voluptate hic?
+      Facilis assumenda alias vel sunt maxime, cumque mollitia error
+      accusantium libero.
+    </p>
+    <section>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/nHJajS8raQU" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+    </section>
+  </main>
+  <footer>
+    <h5>
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      par nos équipes.
+    </h5>
+    <nav>
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
