--- a/pages/Produits/PCPortable.html
+++ b/pages/Produits/PCPortable.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
-    />
-    <link rel="stylesheet" href="../../style2.css" />
-    <title>Pc Portable</title>
-  </head>
-  <body>
-    <main></main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés
-        par nos équipes.
-      </h5>
-      <nav>
-        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-      </nav>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
+  <link rel="stylesheet" href="../../style2.css" />
+  <title>PC portable</title>
+</head>
+
+<body>
+  <header>
+    <img src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Logo de la marque" />
+    <h1>MARKET</h1>
+  </header>
+  <main>
+  </main>
+  <footer>
+    <h5>
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      par nos équipes.
+    </h5>
+    <nav>
+      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
