--- a/pages/Produits/ecrans.html
+++ b/pages/Produits/ecrans.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<body>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
+    <link rel="stylesheet" href="../../style2.css" />
+    <title>Ecrans</title>
+</head>
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
-        <link rel="stylesheet" href="../../style2.css" />
-        <title>Ecrans</title>
-    </head>
+<body>
+    <header>
+        <img src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Logo de la marque" />
+        <h1>MARKET</h1>
+    </header>
     <main>
     </main>
     <footer>
