Adding navbar to header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
         alt="Logo de la marque"
       />
+      <nav>
+        <ul>
+          <li><a href="./index.html">Accueil</a></li>
+          <li><a href="./pages/catalogue.html">Catalogue</a></li>
+          <li><a href="./pages/contact.html">Contact</a></li>
+          <li><a href="./pages/panier.html">Panier</a></li>
+        </ul>
+      </nav>
       <h1>MARKET</h1>
     </header>
     <main>
