Edit Schema Produits

--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -19,7 +19,7 @@
     </main>
     <footer>
         <h5>
-            Tout nos matériels sont issus de récupérations ou dons reconditionnés
+            Tout nos matériels sont issus de récupérations ou dons reconditionnés et vérifiés
             par nos équipes.
         </h5>
         <nav>
