Edit schema Produits

--- a/pages/Produits/UC.html
+++ b/pages/Produits/UC.html
@@ -16,10 +16,34 @@
         <h1>MARKET</h1>
     </header>
     <main>
+        <aside>
+            <button class="left"></button>
+        </aside>
+        <section>
+            <p>
+                L'Unité Centrale, l'Ordinateur ou encore la Tour, est l'outil principal puisque tout les composants y
+                sont intégrés (processeur, disque dur, mémoire vive, etc...)
+                et les outils aditionnels connectés selon les modèles, (PCI, USB, VGA, HDMI, etc...)
+            </p>
+        </section>
+        <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+            <h3 itemprop="name">Unité Centrale</h3>
+            <figure itemprop="image">
+                <img src="../../assets/img/ordinateur.webp" alt="Ordinateur" />
+                <figcaption itemprop="description">
+                    Nos Unitées Centrale sont adaptées aux besoins de l'utilisateurs (mémoire disque dur, mémoire vive,
+                    puissance processeur, etc...), en fonction de nos matériels disponibles.
+                </figcaption>
+            </figure>
+            <h4>60€</h4>
+        </article>
+        <aside class="right">
+            <button></button>
+        </aside>
     </main>
     <footer>
         <h5>
-            Tout nos matériels sont issus de récupérations ou dons reconditionnés
+            Tout nos matériels sont issus de récupérations ou dons reconditionnés et vérifiés
             par nos équipes.
         </h5>
         <nav>
