--- a/pages/Produits/PCPortable.html
+++ b/pages/Produits/PCPortable.html
@@ -16,10 +16,32 @@
     <h1>MARKET</h1>
   </header>
   <main>
+    <aside>
+      <button class="left"></button>
+    </aside>
+    <section>
+      <p>
+        Nos Ordinateurs portables pratique pour les besoins de mobilité travail, formation, etc.... plusieurs formats
+        également disponible avec une reinitialisation type "sortie d'usine"
+      </p>
+    </section>
+    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+      <h3 itemprop="name">PC Portables</h3>
+      <figure itemprop="image">
+        <img src="../../assets/img/portable.webp" alt="portable" />
+        <figcaption itemprop="description">
+          Ordinateurs Portables pour les besoin de mobilité a enmener partout.
+        </figcaption>
+      </figure>
+      <h4>60€</h4>
+    </article>
+    <aside class="right">
+      <button></button>
+    </aside>
   </main>
   <footer>
     <h5>
-      Tout nos matériels sont issus de récupérations ou dons reconditionnés
+      Tout nos matériels sont issus de récupérations ou dons reconditionnés et vérifiés
       par nos équipes.
     </h5>
     <nav>
