--- a/pages/Produits/ecrans.html
+++ b/pages/Produits/ecrans.html
@@ -16,10 +16,32 @@
         <h1>MARKET</h1>
     </header>
     <main>
+        <aside>
+            <button class="left"></button>
+        </aside>
+        <section>
+            <p>
+                Ecrans adaptés selon les besoins, nous disposons de différents modèles s'adaptant à la comptabilité avec
+                l'Unité Centrale (VGA, HMDI, DVI).
+            </p>
+        </section>
+        <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+            <h3 itemprop="name">Ecrans</h3>
+            <figure itemprop="image">
+                <img src="../../assets/img/Screen.webp" alt="Screen" />
+                <figcaption itemprop="description">
+                    L'outils indispensable pour surfer sur le web !
+                </figcaption>
+            </figure>
+            <h4>30€</h4>
+        </article>
+        <aside class="right">
+            <button></button>
+        </aside>
     </main>
     <footer>
         <h5>
-            Tout nos matériels sont issus de récupérations ou dons reconditionnés
+            Tout nos matériels sont issus de récupérations ou dons reconditionnés et vérifiés
             par nos équipes.
         </h5>
         <nav>
