--- a/pages/Produits/souris.html
+++ b/pages/Produits/souris.html
@@ -16,10 +16,32 @@
         <h1>MARKET</h1>
     </header>
     <main>
+        <aside>
+            <button class="left"></button>
+        </aside>
+        <section>
+            <p>
+                la souris fait partie des indispensabls pour un Ordinateur de bureau avec le clavier.
+            </p>
+        </section>
+        <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
+            <h3 itemprop="name">souris</h3>
+            <figure itemprop="image">
+                <img src="../../assets/img/mousse.webp" alt="Mousse" />
+                <figcaption itemprop="description">
+                    Les Souris, différents modèles sont disponible selon les usages avec les classiques clic
+                    gauche, clique droit et possibilité de molettes plus boutons aditionnels selon modèles
+                </figcaption>
+            </figure>
+            <h4>10€</h4>
+        </article>
+        <aside class="right">
+            <button></button>
+        </aside>
     </main>
     <footer>
         <h5>
-            Tout nos matériels sont issus de récupérations ou dons reconditionnés
+            Tout nos matériels sont issus de récupérations ou dons reconditionnés et vérifiés
             par nos équipes.
         </h5>
         <nav>
