Implement data schema.org

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <title>Market</title>
   </head>
   <body>
-    <header>
+    <header itemscope itemtype="https://schema.org/WebPage">
       <img
+        itemprop="image"
         src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
         alt="Logo de la marque"
       />
-      <nav>
+      <nav itemprop="breadcrump">
         <ul>
           <li><a href="./index.html">Accueil</a></li>
           <li><a href="./pages/catalogue.html">Catalogue</a></li>
@@ -25,20 +26,20 @@
           <li><a href="./pages/panier.html">Panier</a></li>
         </ul>
       </nav>
-      <h1>MARKET</h1>
+      <h1 itemprop="about">MARKET</h1>
     </header>
-    <main>
-      <section>
-        <aside>
+    <main itemscope itemtype="https://schema.org/WebPage">
+      <section itemscope itemtype="https://schema.org/Thing">
+        <aside itemprop="breadcrump">
           <button></button>
         </aside>
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
+        <img itemprop="image" src="" alt="" />
+        <img itemprop="image" src="" alt="" />
+        <img itemprop="image" src="" alt="" />
+        <img itemprop="image" src="" alt="" />
+        <img itemprop="image" src="" alt="" />
       </section>
-      <p>
+      <p itemprop="description">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
         libero corrupti itaque praesentium numquam quam dignissimos accusantium
         officiis suscipit, soluta explicabo cum ipsum. Modi impedit facilis odio
@@ -46,8 +47,9 @@
         Facilis assumenda alias vel sunt maxime, cumque mollitia error
         accusantium libero.
       </p>
-      <section>
+      <section itemscope itemtype="https://schema.org/Clip">
         <iframe
+          itemprop="video"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/nHJajS8raQU"
@@ -58,12 +60,12 @@
         ></iframe>
       </section>
     </main>
-    <footer>
-      <h5>
+    <footer itemscope itemtype="https://schema.org/WebPage">
+      <h5 itemprop="description">
         Tout nos matériels sont issus de récupérations ou dons reconditionnés
         par nos équipes.
       </h5>
-      <nav>
+      <nav itemtype="breadcrump">
         <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
         <a href="cgv.html" title="Conditions générales de vente">CGV</a>
         <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
