--- a/pages/panier.html
+++ b/pages/panier.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
+    <link
+      rel="icon"
+      href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+    />
     <link rel="stylesheet" href="../../style2.css" />
     <title>Panier</title>
-</head>
+  </head>
 
-<body>
-    <header>
-        <img src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Logo de la marque" />
-        <h1>MARKET</h1>
+  <body>
+    <header itemscope itemtype="https://schema.org/WebPage">
+      <img
+        itemprop="image"
+        src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        alt="Logo de la marque"
+      />
+      <nav itemprop="breadcrump">
+        <ul>
+          <li><a href="./index.html">Accueil</a></li>
+          <li><a href="./pages/catalogue.html">Catalogue</a></li>
+          <li><a href="./pages/contact.html">Contact</a></li>
+          <li><a href="./pages/panier.html">Panier</a></li>
+        </ul>
+      </nav>
+      <h1 itemprop="about">MARKET</h1>
     </header>
-    <main>
-    </main>
+    <main></main>
     <footer>
-        <h5>
-            Tout nos matériels sont issus de récupérations ou dons reconditionnés
-            par nos équipes.
-        </h5>
-        <nav>
-            <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-            <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-            <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-        </nav>
+      <h5>
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
+      </h5>
+      <nav>
+        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+      </nav>
     </footer>
-</body>
-
-
+  </body>
 </html>
