--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,12 +30,12 @@
       <h1 itemprop="about">MARKET</h1>
     </header>
     <main></main>
-    <footer>
-      <h5>
-        Tout nos matériels sont issus de récupérations ou dons reconditionnés et
-        vérifiés par nos équipes.
+    <footer itemscope itemtype="https://schema.org/WebPage">
+      <h5 itemprop="description">
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
       </h5>
-      <nav>
+      <nav itemtype="breadcrump">
         <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
         <a href="cgv.html" title="Conditions générales de vente">CGV</a>
         <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
