Redirection CSS chaque page

--- a/pages/Produits/clavier.html
+++ b/pages/Produits/clavier.html
@@ -1,62 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+    />
+    <link rel="stylesheet" href="../../style2.css" />
+    <title>Claviers</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
-  <link rel="stylesheet" href="style2.css" />
-  <title>Claviers</title>
-</head>
-
-<body>
-  <header>
-    <img src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Logo de la marque" />
-    <h1>MARKET</h1>
-  </header>
-  <main>
-    <aside>
-      <button class="left"></button>
-    </aside>
-    <section>
-      <p>
-        Un clavier azerty est un clavier alphanumérique dont les touches sont
-        marquées selon la disposition azerty. La disposition tient son nom de
-        la position des six premières lettres de la première rangée des
-        touches alphabétiques.
-      </p>
-    </section>
-    <article itemscope itemtype="https://schema.org/IndividualProduct" itemid="#product">
-      <h3 itemprop="name">Clavier</h3>
-      <figure itemprop="image">
-        <img src="../../assets/img/keyboard.webp" alt="Keyboard" />
-        <figcaption itemprop="description">
-          Clavier azerty pour écrire comme un pro !
-        </figcaption>
-      </figure>
-      <h4>20€</h4>
-    </article>
-  </main>
-  <footer>
-    <h5>
-      Tout nos matériels sont issus de récupérations ou dons reconditionnés
-      par nos équipes.
-    </h5>
-    <nav>
-      <ul>
-        <li>
-          <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-        </li>
-        <li>
-          <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-        </li>
-        <li>
-          <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-        </li>
-      </ul>
-    </nav>
-  </footer>
-</body>
-
+  <body>
+    <header>
+      <img
+        src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        alt="Logo de la marque"
+      />
+      <h1>MARKET</h1>
+    </header>
+    <main>
+      <aside>
+        <button class="left"></button>
+      </aside>
+      <section>
+        <p>
+          Un clavier azerty est un clavier alphanumérique dont les touches sont
+          marquées selon la disposition azerty. La disposition tient son nom de
+          la position des six premières lettres de la première rangée des
+          touches alphabétiques.
+        </p>
+      </section>
+      <article
+        itemscope
+        itemtype="https://schema.org/IndividualProduct"
+        itemid="#product"
+      >
+        <h3 itemprop="name">Clavier</h3>
+        <figure itemprop="image">
+          <img src="../../assets/img/keyboard.webp" alt="Keyboard" />
+          <figcaption itemprop="description">
+            Clavier azerty pour écrire comme un pro !
+          </figcaption>
+        </figure>
+        <h4>20€</h4>
+      </article>
+    </main>
+    <footer>
+      <h5>
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
+      </h5>
+      <nav>
+        <ul>
+          <li>
+            <a href="cgu.html" title="Conditions générales d'utilisation"
+              >CGU</a
+            >
+          </li>
+          <li>
+            <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+          </li>
+          <li>
+            <a href="Mentions.html" title="Mentions légales"
+              >Mentions légales</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
