--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -21,10 +21,10 @@
       />
       <nav itemprop="breadcrump">
         <ul>
-          <li><a href="./index.html">Accueil</a></li>
-          <li><a href="./pages/catalogue.html">Catalogue</a></li>
-          <li><a href="./pages/contact.html">Contact</a></li>
-          <li><a href="./pages/panier.html">Panier</a></li>
+          <li><a href="../index.html">Accueil</a></li>
+          <li><a href="./catalogue.html">Catalogue</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./panier.html">Panier</a></li>
         </ul>
       </nav>
       <h1 itemprop="about">MARKET</h1>
