Mise à jour nom style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
     />
-    <link rel="stylesheet" href="./style2.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Market</title>
   </head>
   <body>
@@ -33,11 +33,31 @@
         <aside itemprop="breadcrump">
           <button></button>
         </aside>
-        <img itemprop="image" src="" alt="" />
-        <img itemprop="image" src="" alt="" />
-        <img itemprop="image" src="" alt="" />
-        <img itemprop="image" src="" alt="" />
-        <img itemprop="image" src="" alt="" />
+        <img
+          itemprop="image"
+          src="./assets/img/keyboard.webp"
+          alt="Photo d'un clavier"
+        />
+        <img
+          itemprop="image"
+          src="./assets/img/laptop.webp"
+          alt="Photo d'un ordinateur portable"
+        />
+        <img
+          itemprop="image"
+          src="./assets/img/mouse.webp"
+          alt="Photo d'une souris d'ordinateur"
+        />
+        <img
+          itemprop="image"
+          src="./assets/img/pc.webp"
+          alt="Photo d'une unité centrale"
+        />
+        <img
+          itemprop="image"
+          src="./assets/img/screen.webp"
+          alt="Photo d'un écran d'ordinateur"
+        />
       </section>
       <p itemprop="description">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo ut
