Fixed nav issues

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         Tout nos matériels sont issus de récupérations ou dons reconditionnés
         par nos équipes.
       </h5>
-      <nav itemtype="breadcrump">
+      <nav itemprop="breadcrump">
         <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
         <a href="cgv.html" title="Conditions générales de vente">CGV</a>
         <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
