--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
       href="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Market</title>
+    <title>Cap' Store</title>
   </head>
   <body>
     <header itemscope itemtype="https://schema.org/WebPage">
       <img
         itemprop="image"
         src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        id="logo"
         alt="Logo de la marque"
       />
       <nav itemprop="breadcrump">
@@ -26,7 +27,7 @@
           <li><a href="./pages/panier.html">Panier</a></li>
         </ul>
       </nav>
-      <h1 itemprop="about">MARKET</h1>
+      <h1 itemprop="about">Cap' Store</h1>
     </header>
     <main itemscope itemtype="https://schema.org/WebPage">
       <section itemscope itemtype="https://schema.org/Thing">
