--- a/pages/panier.html
+++ b/pages/panier.html
@@ -16,7 +16,8 @@
     <header itemscope itemtype="https://schema.org/WebPage">
       <img
         itemprop="image"
-        src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        id="logo"
         alt="Logo de la marque"
       />
       <nav itemprop="breadcrump">
@@ -27,7 +28,7 @@
           <li><a href="./panier.html">Panier</a></li>
         </ul>
       </nav>
-      <h1 itemprop="about">MARKET</h1>
+      <h1 itemprop="about">Cap' Store</h1>
     </header>
     <main></main>
     <footer itemscope itemtype="https://schema.org/WebPage">
