--- a/pages/Produits/UC.html
+++ b/pages/Produits/UC.html
@@ -16,9 +16,10 @@
     <header>
       <img
         src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        id="logo"
         alt="Logo de la marque"
       />
-      <h1>MARKET</h1>
+      <h1>Cap' Store</h1>
     </header>
     <main>
       <aside>
