--- a/pages/Produits/ecrans.html
+++ b/pages/Produits/ecrans.html
@@ -16,6 +16,7 @@
     <header>
       <img
         src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        id="logo"
         alt="Logo de la marque"
       />
       <h1>MARKET</h1>
