--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
     <header itemscope itemtype="https://schema.org/WebPage">
       <img
         itemprop="image"
-        src="./assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
         id="logo"
         alt="Logo de la marque"
       />
