Icon d'onglet MAJ

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+    />
+    <link rel="stylesheet" href="../style.css" />
+    <title>Contact</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" />
-  <link rel="stylesheet" href="../style.css" />
-  <title>Contact</title>
-</head>
-
-<body>
-  <header itemscope itemtype="https://schema.org/WebPage">
-    <img itemprop="image" src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg" id="logo"
-      alt="Logo de la marque" />
-    <nav itemprop="breadcrump">
-      <ul>
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="./catalogue.html">Catalogue</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./panier.html">Panier</a></li>
-      </ul>
-    </nav>
-    <h1 itemprop="about">Cap' Store</h1>
-  </header>
-  <main></main>
-  <footer itemscope itemtype="https://schema.org/WebPage">
-    <h5 itemprop="description">
-      Tout nos matériels sont issus de récupérations ou dons reconditionnés
-      par nos équipes.
-    </h5>
-    <nav itemtype="breadcrump">
-      <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
-      <a href="cgv.html" title="Conditions générales de vente">CGV</a>
-      <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
-    </nav>
-  </footer>
-</body>
-
+  <body>
+    <header itemscope itemtype="https://schema.org/WebPage">
+      <img
+        itemprop="image"
+        src="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        id="logo"
+        alt="Logo de la marque"
+      />
+      <nav itemprop="breadcrump">
+        <ul>
+          <li><a href="../index.html">Accueil</a></li>
+          <li><a href="./catalogue.html">Catalogue</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./panier.html">Panier</a></li>
+        </ul>
+      </nav>
+      <h1 itemprop="about">Cap' Store</h1>
+    </header>
+    <main></main>
+    <footer itemscope itemtype="https://schema.org/WebPage">
+      <h5 itemprop="description">
+        Tout nos matériels sont issus de récupérations ou dons reconditionnés
+        par nos équipes.
+      </h5>
+      <nav itemtype="breadcrump">
+        <a href="cgu.html" title="Conditions générales d'utilisation">CGU</a>
+        <a href="cgv.html" title="Conditions générales de vente">CGV</a>
+        <a href="Mentions.html" title="Mentions légales">Mentions légales</a>
+      </nav>
+    </footer>
+  </body>
 </html>
