--- a/pages/panier.html
+++ b/pages/panier.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+      href="../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
     />
     <link rel="stylesheet" href="../style.css" />
     <title>Panier</title>
