--- a/pages/Produits/souris.html
+++ b/pages/Produits/souris.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
-    />
+    <link rel="icon" href="../../assets/img/logo_lacapsule.webp" />
     <link rel="stylesheet" href="../../style.css" />
     <title>Souris</title>
   </head>
@@ -15,7 +12,7 @@
   <body>
     <header>
       <img
-        src="../../assets/img/icons/store_FILL0_wght400_GRAD0_opsz48.svg"
+        src="../../assets/img/logo_lacapsule.webp"
         id="logo"
         alt="Logo de la marque"
       />
